# areduce

./: CMakeLists.txt  README.md
src/: ahash.cpp  ahash.h  anetlist.cpp  anetlist.h  anreducer.h  anreducer_imp.h  apriority_bucket.h  awriter.cpp  awriter.h
test/: reducer_study.cpp
